# Combat-C

./: .gitignore  CMakeLists.txt  Makefile  README.md  bola.c  bouncer.c  candyc.c  circles.c  combat  combat.c  louco.c  mouse.c  passaro_andante.c  passaro_raivoso.c  pong.c  teclado.c
cmake_modules/: FindAllegro.cmake
collision/include/: collision.h
collision/src/: collision.c
core/include/: score.h
core/includes/: config.h
core/src/: combat.c  score.c
drawer/include/: drawer.h
drawer/src/: drawer.c
modules/collision/include/: collision.h
modules/collision/src/: collision.c
modules/drawer/src/: drawer.c
modules/includes/: collision.h  drawer.h  obstacle.h  tank.h
modules/obstacle/include/: obstacle.h
modules/src/: collision.c  drawer.c  obstacle.c  tank.c
modules/tank/include/: tank.h
modules/tank/src/: tank.c
obstacle/include/: obstacle.h
screens/includes/: game.h  score.h  screens.h
screens/src/: game.c  score.c
src/: Makefile  collision.c  collision.h  combat  combat.c  config.h  obstacle.h  tank.c  tank.h
tank/include/: tank.h
